--- a/scss/layouts/_chefs-section.scss
+++ b/scss/layouts/_chefs-section.scss
@@ -28,7 +28,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 26px;
 
     @media screen and (min-width: $bp-tablet) {
       flex-direction: row;
