--- a/scss/layouts/_mobile-menu.scss
+++ b/scss/layouts/_mobile-menu.scss
@@ -4,8 +4,10 @@
   left: 0;
   width: 100%;
   height: 100%;
+  padding: 16px 24px;
   background-color: var(--color-primary-light);
   transform: translate(100%);
+  z-index: 2;
   transition-duration: 0.5s;
 
   &.is-open {
@@ -18,5 +20,26 @@
     right: 24px;
     border: none;
     background-color: transparent;
+  }
+
+  &__logo {
+    margin-bottom: 32px;
+  }
+
+  &__list {
+    display: flex;
+    flex-direction: column;
+    gap: 16px;
+  }
+
+  &::after {
+    content: "";
+    background-image: url(../images/bread_in_mobile-menu.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    width: 186px;
+    height: 241px;
+    bottom: 0;
+    right: 0;
   }
 }
